# SaveTheKing

./: CMakeLists.txt  README
include/: AddTime.h  Animation.h  Board.h  Button.h  CMakeLists.txt  Clock.h  DestDwarf.h  Dwarf.h  Fire.h  GameController.h  GameObject.h  Gate.h  Gift.h  Gift_1.h  Gift_2.h  Key.h  King.h  Macros.cpp  Macros.h  Mage.h  MainMenu.h  Menu.h  Moving.h  Orc.h  Player.h  Resources.h  Static.h  SubTime.h  Teleporter.h  Thief.h  Throne.h  Wall.h  Warrior.h  Window.h
resources/: CMakeLists.txt  Level_1.txt  Level_2.txt  Level_3.txt
src/: AddTime.cpp  Animation.cpp  Board.cpp  Button.cpp  CMakeLists.txt  Clock.cpp  DestDwarf.cpp  Dwarf.cpp  Fire.cpp  GameController.cpp  GameObject.cpp  Gate.cpp  Gift.cpp  Gift_1.cpp  Gift_2.cpp  Key.cpp  King.cpp  Mage.cpp  MainMenu.cpp  Menu.cpp  Moving.cpp  Orc.cpp  Player.cpp  Resources.cpp  Static.cpp  SubTime.cpp  Teleporter.cpp  Thief.cpp  Throne.cpp  Wall.cpp  Warrior.cpp  Window.cpp  main.cpp
